fix: trigger Playwright workflow on push to main branch

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,9 @@
 name: Comment Playwright Snapshots in PR
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     types: [opened, synchronize]
 
