--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11",
     "vercel": "^44.2.8"
   },
