fix: update Playwright workflow to trigger comments only on PR opened events

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,11 +1,8 @@
 name: Comment Playwright Snapshots in PR
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    types: [opened, synchronize]
+    types: [opened]
 
 jobs:
   comment-snapshots:
