--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,7 +2,7 @@ name: Comment Playwright Snapshots in PR
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, synchronize]
 
 jobs:
   comment-snapshots:
@@ -40,8 +40,8 @@ jobs:
       - name: List snapshot images from public folder
         id: list_images
         run: |
-          if [ -d "public" ]; then
-            FILES=$(ls public/*.png | xargs -n1 basename | tr '\n' ',' | sed 's/,$//')
+          if [ -d "public/screenshots" ]; then
+            FILES=$(ls public/screenshots/*.png | xargs -n1 basename | tr '\n' ',' | sed 's/,$//')
             echo "FILES=$FILES" >> $GITHUB_OUTPUT
           fi
 
@@ -49,7 +49,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/*.png || true
+          git add public/screenshots/*.png || true
           if git diff --cached --quiet; then
             echo "No new screenshots to commit"
           else
@@ -70,8 +70,8 @@ jobs:
               return;
             }
 
-            const fullpageImage = files.find(file => file === 'fullpage.png')
-            const imageMarkdown = `![${fullpageImage}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/${fullpageImage})`
+            const screenshotImage = files.find(file => file === 'screenshot.png')
+            const imageMarkdown = `![${screenshotImage}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/screenshots/${screenshotImage})`
             const commentBody = `🧪 **Playwright Snapshot Previews:**\n\n${imageMarkdown}`
 
             // Get all comments on the PR
@@ -84,7 +84,7 @@ jobs:
             // Find existing bot comment
             const existingComment = listComments.data.find(comment => 
               comment.user.login === 'github-actions[bot]' && 
-              comment.body.includes(fullpageImage)
+              comment.body.includes(screenshotImage)
             )
 
             if (existingComment) {
